--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
 github:
   prebuilds:
-    # enable for the master/default branch (defaults to true)
-    master: true
+    master: false
+    branches: false
