--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,1 +1,6 @@
-image: alpine:3.9
+image:
+  file: .gitpod.Dockerfile
+
+# List the ports you want to expose and what to do when they are served. See https://www.gitpod.io/docs/43_config_ports/
+ports:
+- port: 3000
